# foreign-currency-accounts-for-ynab

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  _config.yml  azure-pipelines.yml
.cargo/: config
etc/azure-pipelines/: build-steps.yml  build.yml  setup.yml  style.yml
migrations/2019-09-21-122131_create_exchange_rates/: down.sql  up.sql
migrations/2019-09-21-204222_create_budgets/: down.sql  up.sql
migrations/2019-09-22-193320_create_difference_transactions/: down.sql  up.sql
migrations/2019-12-03-115001_add_difference_transactions_is_credit_card/: down.sql  up.sql
migrations/2019-12-26-143248_difference_transaction_account_class/: down.sql  up.sql
src/: budget_formatter.rs  cli.rs  constants.rs  currency_converter_client.rs  database.rs  exchange_rates.rs  foreign_accounts.rs  foreign_accounts_processor.rs  foreign_transactions_processor.rs  import_id_generator.rs  lib.rs  main.rs  schema.rs  types.rs  utilities.rs  ynab_client.rs
src/database/: models.rs
