[package]
name = "fca4ynab"
description = "Foreign currency accounts for YNAB."
version = "0.1.9"
authors = ["Emanuel Borsboom <emanuel@borsboom.io>"]
license = "MIT"
edition = "2018"

[dependencies]
chrono = "0.4.9"
clap = { version = "2.33.0", default-features = false }
diesel = { version = "1.4.2", features = ["sqlite"] }
diesel_migrations = "1.4.0"
directories = "2.0.2"
dotenv = "0.14.1"
env_logger = "0.7.0"
error-chain = "0.12.1"
lazy_static = "1.4.0"
libsqlite3-sys = { version = "0.9.1", features = ["bundled"] }
log = "0.4.8"
openssl-probe = "0.1.2"
regex = "1.3.1"
reqwest = "0.9.20"
rust_decimal ="1.0.3"
serde_json = "1.0.41"
ynab-api = { git = "https://github.com/borsboom/ynab-api.git", rev = "b8b870e66c8c9de5cdd95debba3d06ca06f63a2f" }
